Fix layout issue in mobile screen (whitespace right side)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html,
+  body {
+    overflow-x: hidden;
+  }
+}
+
 @layer components {
   .custom-container {
     @apply mx-auto w-full max-w-[1120px] px-6;
